Semi-stable version, just working on RANKS

--- a/static/base.css
+++ b/static/base.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'InterUI';
-    src: url('https://download1638.mediafire.com/zoat3021tc0g/wjiqywl6bs9rxw3/Inter-Regular.ttf');
+    src: url('http://download1638.mediafire.com/7njbb9kpsljg/p22nyhdcra52uww/Inter-Regular.ttf');
 }
 @font-face {
     font-family: "InterUISemiBold";
