--- a/templates/base.html
+++ b/templates/base.html
@@ -8,42 +8,48 @@
 </div>
 <hr>
 <body>
-    <h1>{{ displayname }}</h1>
-    <span class="{{ rankcolor }}"><b>{{ rank }}</b></span>
-    <style>
-    .aqua {
-        color: aqua;
-    }
+    {% if rank != '' and 'YOUTUBE' not in rank %}
+        <h1><span class="{{ rankcolor }}"><b>[{{ rank }}]</b></span> {{ displayname }}</h1>
+        <style>
+        .aqua {
+            color: aqua;
+        }
 
-    .lime {
-        color: lime;
-    }
+        .lime {
+            color: lime;
+        }
 
-    .gold {
-        color: goldenrod;
-    }
+        .gold {
+            color: goldenrod;
+        }
 
-    .blue {
-        color: blue;
-    } 
+        .blue {
+            color: blue;
+        } 
 
-    .green {
-        color: green;
-    } 
+        .green {
+            color: green;
+        } 
 
-    .red {
-        color: red;
-    } 
+        .red {
+            color: red;
+        } 
 
-    .cyan {
-        color: teal;
-    } 
+        .cyan {
+            color: teal;
+        } 
 
-    .pink {
-        color: pink;
-    } 
+        .pink {
+            color: pink;
+        } 
+        </style>
 
-    </style>
+    {% elif rank == '' %}
+        <h1>{{ displayname }}</h1>
+    {% elif 'YOU' in rank %}
+        <h1><span class="{{ rankbracketcolor }}"><b>[</b></span><span class="{{ rankcolor }}"></span><b>{{ rank }}</b></span><span class="{{ rankbracketcolor }}"><b>]</b></span> {{ displayname }}</h1>
+    {% endif %}
+
     <p>{{ uuid }}</p>
 
         <!--- TABLE --->
@@ -51,7 +57,11 @@
             {% for dict_item in namehis %}
             <tr>
                 {% for value in dict_item.values() %}
-                <td> {{ value }} </td>
+                    {% if value|int != 0 %}
+                        <td> <b>{{ value }}</b></td>
+                    {% else %}
+                        <td>{{ value }}</td>
+                    {% endif %}
                 {% endfor %}
             </tr>
             {% endfor %}
@@ -64,7 +74,7 @@
 {% if firstLoginUnix != 1 %}
     <p>karma is <b>{{ reqList }}</b></p>
 
-    <p>Level <b>{{ level }}</b> / <b>{{ levelProgress }}%</b> to <b>{{ levelplusone }}</b> </p>
+    <p>Level <b>{{ level }} {{ multiplier}}</b> / <b>{{ levelProgress }}%</b> to <b>{{ levelplusone }}</b> </p>
     <p><b>{{ achievements }}</b> achievements for <b>{{ achpot }}</b> achievement points</p>
 
     {% if lastLoginUnix == 1 %}
