--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
 
 <title>Profile for {{ displayname }} | Tiramisu</title>
+<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
 
 <div class="hedd">
     <h1>tiramisu</h1>
