--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" type="image/jpg" href="https://i.ibb.co/sw3P3zZ/tiramis2.png"/>
+
 <html>
-    <title>Tiramisu Testing Center</title>
+    <title>Tiramisu - Name History and Hypixel Stats</title>
 <head>
 	<h1>This is a test</h1>
 	<p>This is where the UUID goes<br>Tiramisu by literaiiy (v0.01 Zeta)</p>
