SkyWars has started work, still missing separators, though

--- a/static/base.css
+++ b/static/base.css
@@ -36,3 +36,15 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
+
+a { 
+    color: royalblue;
+}
+
+a.one { 
+    color: skyblue;
+}
+
+a.two { 
+    color: cornflowerblue;
+}
