--- a/templates/base.html
+++ b/templates/base.html
@@ -35,11 +35,11 @@
                     {% if value|int != 0 %}
                         <td><b>{{ value }}</b></td>
                     {% elif value == namehis[0]['name'] %}
-                        <td style="color:royalblue">{{ value }}</td>
+                        <td style="color:royalblue"><a href="https://tiramisu.cc/p/{{ value }}" style="text-decoration:none" >{{ value }}</a></td>
                     {% elif value == namehis[namehis|length-1]['name'] %}
-                        <td style="color:skyblue">{{ value }}</td>
+                        <td style="color:green"><a.one href="localhost:5000/p/{{ value }}" style="text-decoration:none" >{{ value }}</a.one></td/>
                     {% elif value in dict_item['name'] %}
-                        <td style="color:cornflowerblue">{{ value }}</td>
+                        <td style="color:red"><a.two href="localhost:5000/p/{{ value }}" style="text-decoration:none" >{{ value }}</a.two></td>
                     {% else %}
                         <td>{{ value }}</td>
                     {% endif %}
@@ -70,6 +70,11 @@
         <p>First login: <b>{{ firstLogin }}</b></p>
     {% endif %}
 
+    <h2>SkyWars</h2>
+    <p><b>{{ swGamesPlayed }}</b> games played <br>
+        <b>{{ swGamesQuit }}</b> games quit
+    </p>
+
     <hr>
     <p>Tiramisu v{{ version }} "{{ codename }}" from {{ tiramisudate }}</p>
     <p>Flask v{{ flaskver }} from {{ flaskverdate }}</p>
@@ -77,7 +82,6 @@
     {% else %}
     <p>It doesn't seem like this person has ever played on Hypixel.</p>
 {% endif %}
-
 
 </div>
 <footer>
