PROBABLY STABLE - 14 sw statistics work now

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,18 @@
 
     <h2>SkyWars</h2>
     <p><b>{{ swGamesPlayed }}</b> games played <br>
-        <b>{{ swGamesQuit }}</b> games quit
+        <b>{{ swGamesQuit }}</b> games quit <br>
+        {{ swKills }} kills - <i>{{ swHeadDesc }}</i><br>
+        {{ swDeaths }} deaths <br>
+        {{ swKD }} K/D <br>
+        {{ swAssists }} assists <br>
+        {{ swWins }} wins <br>
+        {{ swLosses }} losses <br>
+        {{ swWL }} W/L <br>
+        {{ swSurvived }} players survived <br>
+        {{ swWinstreak }} winstreak <br>
+        {{ swSouls }} souls <br>
+        {{ swHeads }} heads <br>
     </p>
 
     <hr>
