MAY NOT BE STABLE, but seems to be. all 23/24 are now done.

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,13 +77,19 @@
         {{ swDeaths }} deaths <br>
         {{ swKD }} K/D <br>
         {{ swAssists }} assists <br>
-        {{ swWins }} wins <br>
+        {{ swWins }} wins<br>
         {{ swLosses }} losses <br>
-        {{ swWL }} W/L <br>
+        {{ swWL }} W/L - {{ swWinRate }}% win rate <br>
         {{ swSurvived }} players survived <br>
         {{ swWinstreak }} winstreak <br>
         {{ swSouls }} souls <br>
         {{ swHeads }} heads <br>
+        {{ swCoins }} coins <br>
+        {{ swBlocks }} blocks broken <br>
+        {{ swEggs }} eggs thrown <br>
+        {{ swArrowsShot }} arrows shot, {{ swArrowsHit }} arrows hit - {{ swArrowRate }}% hit rate<br>
+        Fastest win: {{ swFastestWin }} <br>
+        {{ swChestsOpened }} chests opened
     </p>
 
     <hr>
