STABILITY PROBLEMS PROBABLY FIXED - stab prob

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
             <td>
                 <b>{{ swGamesPlayed }}</b> games played <br>
                 <b>{{ swGamesQuit }}</b> games quit <br>
-                <b>{{ swKills }}</b> kills - {% if swHeadDesc == '0' %} <p>Eww!</p> {% else %} <i>{{ swHeadDesc }}</i>{% endif %} <br>
+                <b>{{ swKills }}</b> kills - <i>{{ swHeadDesc }}</i><br>
                 <b>{{ swDeaths }}</b> deaths <br>
                 <b>{{ swKD }}</b> K/D <br>
                 <b>{{ swAssists }}</b> assists <br>
