--- a/static/base.css
+++ b/static/base.css
@@ -69,6 +69,11 @@ th {
     margin-left: auto;
     margin-right: auto;
 }
+
+.subtitle {
+    font-family: "Meddon", cursive;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
